Un peu avancé sur le TM5 MAPSI pour demain

--- a/MAPSI/TME/tme5/tme5.ipynb
+++ b/MAPSI/TME/tme5/tme5.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
     "\n",
     "# fonction pour lire les données de la base d'apprentissage\n",
     "def read_csv ( filename ):\n",
-    "    data = np.loadtxt ( filename, delimiter=',', dtype=np.str ).T\n",
+    "    data = np.loadtxt ( filename, delimiter=',', dtype=str ).T\n",
     "    names = data[:,0].copy ()\n",
     "    data, dico = translate_data ( data )\n",
     "    return names, data, dico\n",
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'application de **create_contingency_table ( data, dico, 0, 2, [3] ) **renverra le tableau: \n",
+    "L'application de **create_contingency_table ( data, dico, 0, 2, [3] )** renverra le tableau: \n",
     "```python\n",
     "resultat = array([ (2, array([[ 1.,  0.,  0.],        # Z = 0 => N_{Z=0} = 2\n",
     "                               [ 0.,  0.,  1.]])),\n",
@@ -211,17 +211,17 @@
     "C'est a dire : \n",
     "Si $X_3=0$\n",
     "\n",
-    "|  \t| $X_2$=0| $X_2$=1 \t| $X_2$=3 \t|\n",
+    "|       \t| $X_2$=0| $X_2$=1 \t| $X_2$=3 \t|\n",
     "|:-------:\t|:-------:\t|:-------:\t|:-------:\t|\n",
     "| $X_0$=0 \t|          1 \t| 0 \t| 0 \t|\n",
     "| $X_0$=1 \t|          0 \t| 0 \t| 1 \t|\n",
     "\n",
     "Si $X_3=1$\n",
     "\n",
-    "|  \t| $X_2$=0| $X_2$=1 \t| $X_2$=3 \t|\n",
+    "|  \t        | $X_2$=0   | $X_2$=1 \t| $X_2$=3 \t|\n",
     "|:-------:\t|:-------:\t|:-------:\t|:-------:\t|\n",
-    "| $X_0$=0 \t|          0 \t| 0 \t| 0 \t|\n",
-    "| $X_0$=1 \t|          0 \t| 1 \t| 0 \t|\n",
+    "| $X_0$=0 \t|   0 \t    | 0 \t    | 0 \t    |\n",
+    "| $X_0$=1 \t|   0 \t    | 1 \t    | 0 \t    |\n",
     "\n"
    ]
   },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,13 +296,11 @@
      "output_type": "stream",
      "text": [
       "[(66, array([[ 0.,  0.],\n",
-      "       [ 0., 66.]]))\n",
-      " (844, array([[817.,  14.],\n",
-      "       [ 13.,   0.]]))\n",
+      "        [ 0., 66.]]))    (844, array([[817.,  14.],\n",
+      "                                [ 13.,   0.]]))\n",
       " (37, array([[ 0., 36.],\n",
-      "       [ 0.,  1.]]))\n",
-      " (1053, array([[1.025e+03, 1.200e+01],\n",
-      "       [1.500e+01, 1.000e+00]]))]\n"
+      "        [ 0.,  1.]]))    (1053, array([[1.025e+03, 1.200e+01],\n",
+      "                                [1.500e+01, 1.000e+00]]))     ]\n"
      ]
     }
    ],
@@ -322,8 +320,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Z = z\n",
+    "|          | $Y$=y_0           | $Y$=y_1           | $Y$=y_2           | $\\Sigma$    |\n",
+    "|----------|-------------------|-------------------|-------------------|-------------|\n",
+    "| $X$=x_0  | $N_{x_0, y_0, z}$ | $N_{x_0, y_1, z}$ | $N_{x_0, y_2, z}$ | $N_{x_0,z}$ |\n",
+    "| $X$=x_1  | $N_{x_1, y_0, z}$ | $N_{x_1, y_1, z}$ | $N_{x_1, y_2, z}$ | $N_{x_1,z}$ |\n",
+    "| $\\Sigma$ | $N_{y_0,z}$       | $N_{y_1,z}$       | $N_{y_2,z}$       | $N_z$       |\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -332,11 +342,22 @@
     "def sufficient_statistics ( data, dico, x, y, z ):\n",
     "    # création du tableau de contingence\n",
     "    table = create_contingency_table ( data, dico, x, y, z )\n",
+    "    # print(table)\n",
     "    nb_z = table.shape[0]\n",
     "    nb_x, nb_y = table[0][1].shape\n",
-    "    \n",
-    "    ### votre code\n",
-    "    pass"
+    "    s = []\n",
+    "    for N_z, T in table:\n",
+    "        N_xz = T.sum(axis=1) # Voir tableau si dessus\n",
+    "        N_yz = T.sum(axis=0) # Voir tableau si dessus\n",
+    "        if N_z==0: N_z=1\n",
+    "        frac = np.outer(N_xz,N_yz)/N_z # Outer à cause de la double somme\n",
+    "        den = np.where(frac==0, 1, frac) # On évite la div pas zéros\n",
+    "\n",
+    "        s.append((T - frac)**2/den)\n",
+    "        # display(f\"num : {(T - frac)**2}\")\n",
+    "        # display(f\"frac: {frac}\")\n",
+    "    s = np.array(s)\n",
+    "    return s.sum()"
    ]
   },
   {
@@ -349,23 +370,83 @@
     "\n",
     "| appel de la fonction \t| résultat \t|\n",
     "|--------------------------------------------------\t|--------------------\t|\n",
-    "| sufficient_statistics ( data, dico, 1,2,[3]) \t| 3.9466591186668296 \t|\n",
+    "| sufficient_statistics ( data, dico, 1,2,[3]) \t    | 3.9466591186668296 \t|\n",
     "| sufficient_statistics ( data, dico, 0,1,[2,3]) \t| 16.355207462350094 \t|\n",
-    "| sufficient_statistics ( data, dico, 1,3,[2]) \t| 81.807449348140295 \t|\n",
+    "| sufficient_statistics ( data, dico, 1,3,[2]) \t    | 81.807449348140295 \t|\n",
     "| sufficient_statistics ( data, dico, 5,2,[1,3,6]) \t| 1897.0 \t|\n",
     "| sufficient_statistics ( data, dico, 0,7,[4,5]) \t| 3.2223237760949699 \t|\n",
-    "| sufficient_statistics ( data, dico, 2,3,[5]) \t| 130.0 \t|"
+    "| sufficient_statistics ( data, dico, 2,3,[5]) \t    | 130.0 \t|"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.946659118666829"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "16.355207462350094"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "81.8074493481403"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1897.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.2223237760949703"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "130.00000000000003"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# print(sufficient_statistics ( data, dico, 1,2,[3]) )"
+    "display(sufficient_statistics( data, dico, 1,2,[3]))\n",
+    "display(sufficient_statistics( data, dico, 0,1,[2,3]))\n",
+    "display(sufficient_statistics( data, dico, 1,3,[2]))\n",
+    "display(sufficient_statistics( data, dico, 5,2,[1,3,6]))\n",
+    "display(sufficient_statistics( data, dico, 0,7,[4,5]))\n",
+    "display(sufficient_statistics( data, dico, 2,3,[5]))"
    ]
   },
   {
@@ -394,9 +475,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1., 96.],\n",
+       "       [ 1.,  7.]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[26.20554803, 26.20554803],\n",
+       "       [26.20554803, 26.20554803]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[892.11913548,  12.88086452],\n",
+       "       [977.88086452,  14.11913548]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -436,6 +557,8 @@
     "\n",
     "            denominateur = np.where ( N_xyz == 0, 1, N_xyz )\n",
     "            numerateur = table[z][1] - N_xyz\n",
+    "            display(numerateur**2)\n",
+    "            display(denominateur)\n",
     "            stat += ( numerateur * numerateur / denominateur ).sum ()\n",
     "\n",
     "    # on calcule le nombre de degrés de liberté\n",
@@ -784,7 +907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -798,7 +921,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
