added few notes

--- a/LRC/cours.tex
+++ b/LRC/cours.tex
@@ -212,7 +212,7 @@ Pas de diapo au moment du cours
 \textbf{NOUVEAU PROF}
 Modèle Lr : diamond et carré $\Leftrightarrow$ il existe et pour tout 
 
-Modèle de Kripke = ensemble de monde (interprétation ?). Puis on peut faire un graph sur comment relier les mondes. \begin{itemize}
+Modèle de Kripke = ensemble de monde (interprétation ?) . Puis on peut faire un graph sur comment relier les mondes. \begin{itemize}
     \item $ M, w_0\models p \rightarrow q $ c'est faux car dans le monde $ w_0 $ $ p $ est vrais mais $ q $ est faux
     \item $ M, w_0\models \Box p $ est vrais, on regarde si tous les mondes qui parte de $ w_0 $ on $ p $ de vrais.
     \item $ M, w_1 \models (p \vee r) \rightarrow \Box p$ ici on regarde dans $ w_1 $, la prémice de la fleche est vrais car p est vrais dans $ w_1 $, donc $ \Box p $ doit être vrais. On regarde dans $ w_3 $, $ p $ est faux donc l'implication est fausse. En revanche en partant de $ w_0 $ 
@@ -223,8 +223,22 @@ Modèle de Kripke = ensemble de monde (interprétation ?). Puis on peut faire un
         \end{itemize}
         \item $w_1 \Box p$ Faux
     \end{itemize}
-    \item VOIR ONENOTE J4ARRIVERAI JAMAIOS A ALLER ASSEZ VITE 
+    \item $ M, w_2 \models \Box \Box q $ Vrais
+    \item $ M, w_2 \models \diamond (r \wedge \Box q) $ \begin{itemize}
+        \item $ M, w_2 \models (r \wedge \Box Q) $ Vrais 
+        \item $ M, w_1 \models (r \wedge \Box Q) $ Faux 
+    \end{itemize} $\rightarrow$ VRAIS
 \end{itemize}
+
+Diapo 9 : \\
+$ M, w \models \phi $ = La formule est statisfaire dans le monde $ w $ du model $ M $. \\
+Si pas d'autre monde accessible ? alors $ M, w_1 \models \Box \phi  $ est vrais
+
+Diapo 10 : \\
+Loupé bruh
+
+Diapo 12 : \\
+Démonstration par l'absurde 
 
 Système normal K (diapo 13): on veut avoir un système de preuve simple, comme celui de Hilbert. On a un axiome sous la forme d'une implication comme pour Hilbert. Mais on simplifie un peu par rapport à Hilbert niveau démonstration, je crois pas l'axiome $ K $ . \\
 Déduction (diapo 14) : On a prouvé $ p \rightarrow p \vdash \Box p \rightarrow \Box q $ (dans un univers ou tous les mondes vérifie $ p \rightarrow q $ alors $ \Box p \rightarrow \Box q $). Attention ça n'est pas équivalent a $ \vdash p \rightarrow p \vdash \Box p \rightarrow \Box q$, dans celle là on ne vérifie pas l'HP que tous les mondes on $ p \rightarrow q $. 
